// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressOverviewTile component should render correctly 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    text="Address Book"
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        text="Default Shiping Address"
        textDecoration={null}
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        dataLocator="addressbook-overview-edit"
        fontSizeVariation="large"
        locator=""
        noLink={true}
        onPress={[Function]}
        text="Add"
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    text="You have not added an address yet."
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        text="Default Billing Address"
        textDecoration={null}
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        data-locator="addressbook-makedefault"
        fontSizeVariation="large"
        lineHeight="10"
        locator=""
        noLink={true}
        onPress={[Function]}
        text="Add"
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    text="You have not added an address yet."
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(WithTheme(CustomButton))
      buttonVariation="variable-width"
      fill="BLUE"
      onPress={[Function]}
      text="View Address Book"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`AddressOverviewTile render empty address component should render correctly 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        textDecoration={null}
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        dataLocator="addressbook-overview-edit"
        fontSizeVariation="large"
        locator=""
        noLink={true}
        onPress={[Function]}
        text=""
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        textDecoration={null}
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        data-locator="addressbook-makedefault"
        fontSizeVariation="large"
        lineHeight="10"
        locator=""
        noLink={true}
        onPress={[Function]}
        text=""
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(WithTheme(CustomButton))
      buttonVariation="variable-width"
      fill="BLUE"
      onPress={[Function]}
    />
  </Styled(View)>
</Styled(View)>
`;
